deploy/local/ingress-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: local
  namespace: ingress
spec:
  gatewayClassName: traefik
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: web
      port: 8080
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      name: websecure
      port: 8443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: wildcard-tls
        mode: Terminate
    - allowedRoutes:
        namespaces:
          from: All
      name: postgres
      port: 30432
      protocol: TLS
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: wildcard-tls
        mode: Terminate
