deploy/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: greenstar
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.greenstar.test
      secretName: greenstar-backend-tls
    - hosts:
        - '*.greenstar.test'
      secretName: greenstar-frontend-tls
  rules:
    - host: api.greenstar.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: greenstar-app-backend
                port:
                  name: http
    - host: '*.greenstar.test'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: greenstar-app-frontend
                port:
                  name: http
