deploy/local/jaeger-all-in-one.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: all-in-one
    app.kubernetes.io/name: jaeger
  name: jaeger-all-in-one
spec:
  ports:
    - name: coll-otlp-grpc
      port: 4317
      targetPort: coll-otlp-grpc
    - name: coll-otlp-http
      port: 4318
      targetPort: coll-otlp-http
    - name: coll-zipkin
      port: 9411
      targetPort: coll-zipkin
    - name: coll-grpc
      port: 14250
      targetPort: coll-grpc
    - name: coll-http
      port: 14268
      targetPort: coll-http
    - name: query-http
      port: 16686
      targetPort: query-http
  selector:
    app.kubernetes.io/instance: all-in-one
    app.kubernetes.io/name: jaeger
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: all-in-one
    app.kubernetes.io/name: jaeger
    app.kubernetes.io/version: 1.63.0
  name: jaeger-all-in-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: all-in-one
      app.kubernetes.io/name: jaeger
      app.kubernetes.io/version: 1.63.0
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: all-in-one
        app.kubernetes.io/name: jaeger
        app.kubernetes.io/version: 1.63.0
    spec:
      containers:
        - image: jaegertracing/all-in-one:1.63.0
          name: jaeger
          ports:
            - containerPort: 4317
              name: coll-otlp-grpc
            - containerPort: 4318
              name: coll-otlp-http
            - containerPort: 9411
              name: coll-zipkin
            - containerPort: 14250
              name: coll-grpc
            - containerPort: 14268
              name: coll-http
            - containerPort: 16686
              name: query-http
          resources:
            limits:
              cpu: 300m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 64Mi
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: all-in-one
    app.kubernetes.io/name: jaeger
    app.kubernetes.io/version: 1.63.0
  name: jaeger-all-in-one-http
spec:
  hostnames:
    - jaeger.greenstar.test
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: local
      namespace: ingress
      sectionName: web
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: all-in-one
    app.kubernetes.io/name: jaeger
    app.kubernetes.io/version: 1.63.0
  name: jaeger-all-in-one-https
spec:
  hostnames:
    - jaeger.greenstar.test
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: local
      namespace: ingress
      sectionName: websecure
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: jaeger-all-in-one
          port: 16686
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
