deploy/local/kube-prometheus-stack-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: kube-prometheus-stack-grafana
    app.kubernetes.io/instance: stack
    app.kubernetes.io/managed-by: manual
    app.kubernetes.io/part-of: kube-prometheus-stack
  name: stack-grafana-http
spec:
  hostnames:
    - grafana.greenstar.test
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: local
      namespace: ingress
      sectionName: web
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: kube-prometheus-stack-grafana
    app.kubernetes.io/instance: stack
    app.kubernetes.io/managed-by: manual
    app.kubernetes.io/part-of: kube-prometheus-stack
  name: stack-grafana-https
spec:
  hostnames:
    - grafana.greenstar.test
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: local
      namespace: ingress
      sectionName: websecure
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: kube-prometheus-stack-grafana
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: kube-prometheus-stack-prometheus
    app.kubernetes.io/instance: stack
    app.kubernetes.io/managed-by: manual
    app.kubernetes.io/part-of: kube-prometheus-stack
  name: stack-kube-prometheus-stac-prometheus-http
spec:
  hostnames:
    - prom.greenstar.test
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: local
      namespace: ingress
      sectionName: web
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: kube-prometheus-stack-prometheus
    app.kubernetes.io/instance: stack
    app.kubernetes.io/managed-by: manual
    app.kubernetes.io/part-of: kube-prometheus-stack
  name: stack-kube-prometheus-stac-prometheus-https
spec:
  hostnames:
    - prom.greenstar.test
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: local
      namespace: ingress
      sectionName: websecure
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: kube-prometheus-stack-prometheus
          port: 9090
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: kube-prometheus-stack-alertmanager
    app.kubernetes.io/instance: stack
    app.kubernetes.io/managed-by: manual
    app.kubernetes.io/part-of: kube-prometheus-stack
  name: stack-kube-prometheus-stac-alertmanager-http
spec:
  hostnames:
    - alertmanager.greenstar.test
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: local
      namespace: ingress
      sectionName: web
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: kube-prometheus-stack-alertmanager
    app.kubernetes.io/instance: stack
    app.kubernetes.io/managed-by: manual
    app.kubernetes.io/part-of: kube-prometheus-stack
  name: stack-kube-prometheus-stac-alertmanager-https
spec:
  hostnames:
    - alertmanager.greenstar.test
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: local
      namespace: ingress
      sectionName: websecure
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: kube-prometheus-stack-alertmanager
          port: 9093
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
