deploy/local/prometheus-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/name: prometheus
  name: prometheus-http
spec:
  hostnames:
    - prom.greenstar.test
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: local
      namespace: ingress
      sectionName: web
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/name: prometheus
  name: prometheus-https
spec:
  hostnames:
    - prom.greenstar.test
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: local
      namespace: ingress
      sectionName: websecure
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: prometheus-server
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
